Fixed a few issues reported by FindBugs